<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="store.chinaotec.com.medicalcare.activity.DeviceNoAddActivity">

    <RelativeLayout
        android:id="@+id/relative_see_doctor_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorTooBar"
        android:padding="@dimen/px5">

        <include layout="@layout/base_back" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/main_mine_device"
            android:textColor="@android:color/white"
            android:textSize="@dimen/px20" />
    </RelativeLayout>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@mipmap/my_device" />

    <Button
        android:id="@+id/add_device"
        android:layout_width="@dimen/px110"
        android:layout_height="@dimen/px40"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/px66"
        android:background="@drawable/round_shape_added"
        android:text="@string/add_device"
        android:textColor="@android:color/white"
        android:textSize="@dimen/px15" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/px23"
        android:text="@string/device_recmend"
        android:textColor="@color/userPhone"
        android:textSize="@dimen/px11" />

    <TextView
        android:id="@+id/no_add_click_buy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/px6"
        android:text="@string/click_buy"
        android:textColor="@color/colorTooBar"
        android:textSize="@dimen/px9" />

    <View
        android:layout_width="@dimen/px40"
        android:layout_height="@dimen/px1"
        android:layout_below="@+id/add_manuly"
        android:layout_gravity="center_horizontal"
        android:background="@color/colorTooBar" />
</LinearLayout>
