<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="@dimen/px300"
    android:layout_height="wrap_content"
    android:background="@drawable/round_shape_remove_cash"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/px10"
        android:text="@string/remove_cash_title"
        android:textColor="@android:color/black"
        android:textSize="@dimen/px14" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/px1"
        android:layout_marginTop="@dimen/px20"
        android:background="@color/addAddressInfoOne" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/px50"
        android:orientation="horizontal">

        <Button
            android:id="@+id/remove_cash_canle"
            android:layout_width="@dimen/px0"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:background="@null"
            android:gravity="center"
            android:text="@string/remove_cash_canle"
            android:textColor="@color/removeCashCanle"
            android:textSize="@dimen/px14" />

        <View
            android:layout_width="@dimen/px1"
            android:layout_height="wrap_content"
            android:background="@color/addAddressInfoOne" />

        <Button
            android:id="@+id/remove_cash_ok"
            android:layout_width="@dimen/px0"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:background="@null"
            android:gravity="center"
            android:text="@string/remove_cash_ok"
            android:textColor="@color/removeCashAgree"
            android:textSize="@dimen/px14" />
    </LinearLayout>
</LinearLayout>